--- a/views/wiki/show.ejs
+++ b/views/wiki/show.ejs
@@ -13,18 +13,27 @@
   </head>
   <body>
     <nav>
-      <div class="nav-wrapper teal teal darken-3"><h1 id="title">Pitch:<%= wiki.category %> Board</h1></div>
-    </nav>
+      <div class="nav-wrapper indigo darken-4">
+        <ul class="center hide-on-med-and-down">
+          <a href="/wiki" class="left hide-on-med-and-down" class="brand-logo">CATEGORY</a>
+          <li><a class="btn-floating indigo darken-4" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
+          <li><a class="btn-floating indigo darken-4" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
+          <li><a class="btn-floating indigo darken-4" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
+          <li><a class="btn-floating indigo darken-4" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
+          <li><a class="btn-floating indigo darken-4" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
+        </ul>
+        </div>
+      </nav>
     <div class="hide-on-small-only">
       <form>
         <div class="input-field">
           <input id="search" type="search" required>
-          <button id="the-search-button"><label id="search-icon" class="label-icon" for="search"><i class="material-icons">search</i></label></button>
+          <label id="search-icon" class="label-icon" for="search"><i class="material-icons">search</i></label>
           <i id="close-icon" class="material-icons">close</i>
         </div>
       </form>
     </div>
-  <div class="col s12 m4 l2">
+  <!-- <div class="col s12 m4 l2">
     <div id="left-column">
           <ul id="dropdown1" class="dropdown-content">
             <li><a id="tech-drop-down" href="/wiki/tech/show">tech</a></li>
@@ -39,21 +48,21 @@
           <li><a class="dropdown-button" href="#!" data-activates="dropdown1">CATEGORIES<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
     </div>
-  </div>
+  </div> -->
 
-    <div class="col s12 m4 l2">
+    <div class="col s12 m4 l8">
         <div id="top-categories">
             <div class="fixed-action-btn horizontal click-to-toggle">
-              <a class="btn-floating btn-large teal darken-3">
+              <a class="btn-floating btn-large indigo darken-4">
                 <i class="material-icons">menu</i>
               </a>
               <ul>
-                <li><a class="btn-floating teal lighten-3" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
-                <li><a class="btn-floating teal darken-3" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
-                <li><a class="btn-floating teal lighten-3" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
-                <li><a class="btn-floating teal darken-3" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
-                <li><a class="btn-floating teal lighten-3" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
-                <li><a class="btn-floating teal darken-3" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
+                <li><a class="btn-floating indigo darken-4" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
+                <li><a class="btn-floating indigo lighten-3" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
+                <li><a class="btn-floating indigo darken-4" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
+                <li><a class="btn-floating indigo lighten-3" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
+                <li><a class="btn-floating indigo darken-4" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
+                <li><a class="btn-floating indigo lighten-3" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
               </ul>
             </div>
         </div>
@@ -61,16 +70,23 @@
 
     <div class="col s12 m4 l8">
       <% wiki.forEach(wiki => { %>
-        <div id="show-card-panel" class="card-panel">
+        <div id="show-card-panel" class="card-panel indigo lighten-5">
         <div class="card-content">
           <p>Title:<%= wiki.title %></p>
         </div>
         <div class="date-created">
-          <p>Created At:<%= wiki.date_created %></p>
+          <% console.log(typeof `${wiki.date_created}`) %>
+          <p>Date Created: <%= `${wiki.date_created}`.slice(0,10) %></p>
         </div>
+        <!-- <div class="date-created">
+          <p>Date Created: <%= wiki.date_created %></p>
+        </div> -->
           <p>Category:<%= wiki.category %></p>
           <p> Content:<%= wiki.content %></p>
-          <a class="white-text" href="/wiki/<%= wiki.id %>/edit"><i class="material-icons teal lighten-3">mode_edit</i></a>
+
+          <i class="material-icons indigo lighten-3">grade</i>
+          <a class="white-text" href="/wiki/<%= wiki.id %>/edit"><i class="material-icons indigo lighten-3">mode_edit</i></a>
+
         </div>
         <% }) %>
       </div>
