--- a/views/wiki/index.ejs
+++ b/views/wiki/index.ejs
@@ -6,11 +6,7 @@
       <title>PITCH!</title>
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link rel="stylesheet" href="/css/style.css" />
-      <script src="/libraries/jquery/jquery.min.js"></script>
       <link rel="stylesheet" href="/libraries/materialize/css/materialize.min.css" />
-      <script src="/libraries/materialize/js/materialize.min.js"></script>
-      <script src="/js/app.js"></script>
-      <script src="libraries/marked.min.js"></script>
   </head>
   <body>
     <nav>
@@ -32,12 +28,12 @@
     </nav>
 <!--Search bar!  -->
     <div class="hide-on-small-only">
-      <form action="wiki/search" id="search-form">
+      <form action="/wiki/search" id="search-form">
         <div class="input-field">
-          <input name="search" id="search" type="search" required placeholder="search bar">
+          <input name="search" id="search" type="text" required placeholder="search bar">
           <label id="search-icon" class="label-icon" for="search"><i class="material-icons">search</i></label>
           <i id="close-icon" class="material-icons">close</i>
-          <button type="submit">ENTER</button>
+          <button type="submit" id="the-button">ENTER</button>
         </div>
       </form>
     </div>
@@ -107,5 +103,10 @@
           <% }) %>
         </div>
       </div>
+      <script src="/libraries/jquery/jquery.min.js"></script>
+      <script src="/libraries/materialize/js/materialize.min.js"></script>
+      <script src="/libraries/marked.min.js"></script>
+      <script src="js/app.js"></script>
+
   </body>
 </html>
