--- a/views/wiki/show.ejs
+++ b/views/wiki/show.ejs
@@ -15,7 +15,7 @@
     <nav>
       <div class="nav-wrapper indigo darken-4">
         <ul class="center hide-on-med-and-down">
-          <a href="/wiki" class="left hide-on-med-and-down" class="brand-logo">CATEGORY</a>
+          <a href="/wiki" class="left hide-on-med-and-down" class="brand-logo">PITCH</a>
           <li><a class="btn-floating indigo darken-4" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
           <li><a class="btn-floating indigo darken-4" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
           <li><a class="btn-floating indigo darken-4" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
@@ -24,31 +24,6 @@
         </ul>
         </div>
       </nav>
-    <div class="hide-on-small-only">
-      <form>
-        <div class="input-field">
-          <input id="search" type="search" required>
-          <label id="search-icon" class="label-icon" for="search"><i class="material-icons">search</i></label>
-          <i id="close-icon" class="material-icons">close</i>
-        </div>
-      </form>
-    </div>
-  <!-- <div class="col s12 m4 l2">
-    <div id="left-column">
-          <ul id="dropdown1" class="dropdown-content">
-            <li><a id="tech-drop-down" href="/wiki/tech/show">tech</a></li>
-            <li class="divider"></li>
-            <li><a href="/wiki/travel/show">travel</a></li>
-            <li class="divider"></li>
-            <li><a href="/wiki/style/show">style</a></li>
-            <li class="divider"></li>
-            <li><a href="/wiki/food/show">food</a></li>
-          </ul>
-        <ul class="left hide-on-med-and-down">
-          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">CATEGORIES<i class="material-icons right">arrow_drop_down</i></a></li>
-        </ul>
-    </div>
-  </div> -->
 
     <div class="col s12 m4 l8">
         <div id="top-categories">
@@ -78,15 +53,10 @@
           <% console.log(typeof `${wiki.date_created}`) %>
           <p>Date Created: <%= `${wiki.date_created}`.slice(0,10) %></p>
         </div>
-        <!-- <div class="date-created">
-          <p>Date Created: <%= wiki.date_created %></p>
-        </div> -->
           <p>Category:<%= wiki.category %></p>
           <p> Content:<%= wiki.content %></p>
-
           <i class="material-icons indigo lighten-3">grade</i>
           <a class="white-text" href="/wiki/<%= wiki.id %>/edit"><i class="material-icons indigo lighten-3">mode_edit</i></a>
-
         </div>
         <% }) %>
       </div>
